--- a/src/theme/static_src/package.json
+++ b/src/theme/static_src/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "npm run dev",
-    "build": "npm run build:clean && npm run build:tailwind",
+    "build": "tailwindcss -c ./tailwind.config.js -i ./src/styles.css -o ../static/css/dist/styles.css --minify",
     "build:clean": "rimraf ../static/css/dist",
     "build:tailwind": "cross-env NODE_ENV=production postcss ./src/styles.css -o ../static/css/dist/styles.css --minify",
     "dev": "cross-env NODE_ENV=development postcss ./src/styles.css -o ../static/css/dist/styles.css --watch"
